# miniclaw

./: README.md  README_EN.md  README_JP.md  README_KR.md  api.py  cli.py  main.py  mcp_config.yaml  pyproject.toml  requirements.txt
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
skills/: manifest.yaml
src/: __init__.py  __main__.py  entry.py  miniclaw_bin.py
src/acp/: __init__.py  server.py  types.py
src/agent_loop/: __init__.py  app.py  compaction.py  graph.py  loop_detection.py  skills_snapshot.py  state.py
src/channel/: allow_from.py  channel_plugin.py  channel_registry.py  health_monitor.py  runtime_store.py
src/channels/: __init__.py  cli_channel.py  webhook_channel.py
src/cli/: agent_chat.py  command_bootstrap.py  run_main.py
src/config/: settings.py
src/cron/: __init__.py  parse.py  service.py  store.py  types.py
src/gateway/: agent_methods.py  broadcast.py  chat_history.py  config_reload.py  dedupe.py  gates.py  graceful_shutdown.py  hooks.py  lanes.py  openai_compat.py  server.py  server_impl.py  startup_auth.py
src/mcp/: tools.py
src/memory/: __init__.py  embedding.py  files.py  flush.py  manager.py  postprocess.py  search.py
src/miniclaw/: __init__.py  api.py  cli.py  main.py
src/plugins/: __init__.py  manifest.py  registry.py
src/session/: __init__.py  key.py  lifecycle.py  store.py
src/skills/: __init__.py  config.py  frontmatter.py  refresh.py  workspace.py
src/tools/: base.py  news.py  registry.py  tavily.py  think.py  weather.py
src/tui/: __init__.py  banner.py  chat_log.py  (+3 more)
tests/: __init__.py  test_api.py  test_integration.py  test_units.py
(+129 files in other folders)
